syntax = "proto3";

package test;

option go_package = "apis/test";

message Empty {
}

message PingRequest {
  string value = 1;
}

message PingResponse {
  string value = 1;
  int32 counter = 2;
}

service TestService {
  rpc Ping(PingRequest) returns (PingResponse) {}
  rpc PingOneStream(PingRequest) returns (stream PingResponse) {}
  rpc PingTwoStream(stream PingRequest) returns (stream PingResponse) {}
}

